[project]
name = "limedriver"
version = "0.1.0"
description = "Python bindings for limedriver"
authors = [{name = "Kumi", email = "limedriver@kumi.email"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=0.29.21"
]